# mediator_controller/swagger/swagger.yaml
@@ -125,6 +125,48 @@ paths:
                 type: string
                 x-content-type: application/json
       x-openapi-router-controller: mediator_controller.controllers.default_controller
+  /datastore/update_redis_for_mediator:
+    get:
+      summary: update_redis_for_mediator
+      operationId: update_redis_for_mediator
+      parameters:
+      - name: neid
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: source
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      - name: type
+        in: query
+        required: true
+        style: form
+        explode: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: get success
+          content:
+            application/json:
+              schema:
+                type: string
+                x-content-type: application/json
+        "400":
+          description: operation failed!
+          content:
+            application/json:
+              schema:
+                type: string
+                x-content-type: application/json
+      x-openapi-router-controller: mediator_controller.controllers.datastore_controller
   /datastore/get_controller_config:
     get:
       summary: get controller configuration
